force-app/main/default/objects/MyAccount__c/MyAccount__c.object-meta.xml
<CustomObject>
    <description>Custom Accounts Object</description>
    <label>MyAccount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>