force-app/main/default/objects/MyAccount__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Enter Full Name of the Account</description>
    <label>Full Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>