force-app/main/default/objects/MyAccount__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Account&#39;s Industry typ</description>
    <label>Industry</label>
    <length>25</length>
    <type>Text</type>
</CustomField>