force-app/main/default/objects/MyAccount__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Account&#39;s Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>