force-app/main/default/objects/MyAccount__c/fields/XMLResponse__c.field-meta.xml
<CustomField>
    <fullName>XMLResponse__c</fullName>
    <description>Contains the XML Data</description>
    <label>XMLResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>