force-app/main/default/objects/MyAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Industry__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>